minor code cleanups