@@ -129,8 +129,8 @@ public class OutputTemplateTaskTest {
         when(templatingEngine.processTemplate(eq(templateString), anyMap(), eq(TEXT))).
                 then(invocation -> expectedOutputString);
 
-        var expectedPreQuickReply = expectedPreQuickReplies.get(0);
-        var expectedPostQuickReply = expectedPostQuickReplies.get(0);
+        var expectedPreQuickReply = expectedPreQuickReplies.getFirst();
+        var expectedPostQuickReply = expectedPostQuickReplies.getFirst();
 
         String expectedPreQuickReplyValue = expectedPreQuickReply.getValue();
         String expectedPostQuickReplyValue = expectedPostQuickReply.getValue();
